compiler/tests/success/otbn/intrinsic_mov.jazz
export
fn mov(reg u32 arg0) -> reg u32 {
    reg u32 x;
    x = #MOV(arg0);
    return x;
}
