compiler/tests/fail/arm-m4/intrinsic_sdivS.jazz
export
fn sdiv(reg u32 arg0, reg u32 arg1) -> reg u32 {
    reg u32 x;
    ?{}, x = #SDIVS(arg0, arg1);
    reg u32 res;
    res = x;
    return res;
}

